# actio-marketing-panel

./: .env.example  .env.sendly.example  .gitignore  .mcp.json.example  README.md  ads.py  ads_click_conversions.py  ai_bot_report.py  aibot_wp_sync.py  alerts.py  analyze.py  app.py  autopublish.py  brand_config.py  chainlit_audio.py  chainlit_eleven_gen.py  chainlit_image_gen.py  chainlit_kasia_gen.py  chainlit_reklama_gen.py  chainlit_schema.sql  chainlit_veo_gen.py  chainlit_video_gen.py  cloudflare.py  cmo_context.md  context_sendly.md  customer_match_upload.py  db.py  dg_placements_yt.tsv  email_sender.py  ga4.py  geo_monitor.py  geo_report.py  gsc.py  image_gen.py  mail_checker.py  mcp_server.py  panel_positive_report.py  pyproject.toml  social_autopost.py  social_publish.py  (+5 more)
.chainlit/: chainlit_pl-PL.md  config.toml
deploy/: SETUP.md  actio-autopublish-checker.service  actio-autopublish-checker.timer  actio-autopublish-generate.service  actio-autopublish-generate.timer  actio-brand-budget-weekday.service  actio-brand-budget-weekday.timer  actio-brand-budget-weekend.service  actio-brand-budget-weekend.timer  actio-chainlit.service  actio-daily-report.service  actio-daily-report.timer  actio-social-ig-publish.service  actio-social-ig-publish.timer  actio-webhook.service  sendly-ads-conversions.service  sendly-ads-conversions.timer  sendly-daily-report.service  sendly-daily-report.timer  sendly-geo-monitor.service  sendly-geo-monitor.timer
handoff/: actio-3cx-h1.php  actio-consent-grant.php  actio-gsc-file.php  actio-gsc-verify.php  actio-h1-fix.php  (+12 more)
(+13 files in other folders)
